# g_directory

./: .gitignore  README.md  g_dir_script.py  pyproject.toml  token.pickle
g_tool_box/: drive_tools.py  g_tools.py  google_credentials.py  sheet_tools.py  user_tools.py
tests/: test_g_directory.py  test_tool_box.py
tests_g_directory/func/: test_drive_create_move_delete_files_folders.py  test_user_data.py
tests_g_directory/unit/: test_drive_tools.py  test_g_tool_box.py  test_sheet_tools.py  test_user_tools.py
tool_box/: g_tools.py
